# semver-query

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  release.yaml
src/: main.rs  semver.rs
src/test_data/keycloak/: case_0_expectation.txt  case_1_expectation.txt  case_2_expectation.txt  case_3_expectation.txt  case_4_expectation.txt  input.txt
src/test_data/kubernetes/: case_0_expectation.txt  case_1_expectation.txt  case_2_expectation.txt  case_3_expectation.txt  case_4_expectation.txt  input.txt
src/test_data/tensorflow/: case_0_expectation.txt  case_1_expectation.txt  case_2_expectation.txt  input.txt
