[package]
name = "semver-query"
version = "0.1.1"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
description = "semantic versioning data query tool"
homepage = "https://github.com/zak905/semver-query"
repository = "https://github.com/zak905/semver-query"
readme = "README.md"
keywords = ["semantic-versioning", "CLI", "util", "query", "semver"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
jsonpath-rust = "1.0.4"
luaparse = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
regex = "1.11.3"
